Fix spacing between main-links and second-nav

--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -186,7 +186,7 @@ footer,
 }
 
 .second-nav {
-    margin-top: 0.2rem;
+    margin: 0.6rem 0 1rem 0;
 }
 
 .main-link {
